# ammo-is-complicated

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
data/: ammo.json
data/XmlExtensions/Defs/: settings.xml
data/XmlExtensions/Patches/: ammo_is_scarce.xml
script/: __init__.py  consts.py  leadify.py
